@@ -11,8 +11,10 @@ import java.util.Map;
 import java.util.NavigableSet;
 import java.util.Set;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
@@ -34,6 +36,7 @@ import com.sap.sailing.domain.leaderboard.NumberOfCompetitorsInLeaderboardFetche
 import com.sap.sailing.domain.leaderboard.ResultDiscardingRule;
 import com.sap.sailing.domain.leaderboard.ScoreCorrection.Result;
 import com.sap.sailing.domain.leaderboard.ScoreCorrectionListener;
+import com.sap.sailing.domain.leaderboard.ScoringScheme;
 import com.sap.sailing.domain.leaderboard.SettableScoreCorrection;
 import com.sap.sailing.domain.leaderboard.ThresholdBasedResultDiscardingRule;
 import com.sap.sailing.domain.racelog.RaceLogIdentifier;
@@ -48,8 +51,6 @@ import com.sap.sse.common.Speed;
 import com.sap.sse.common.TimePoint;
 import com.sap.sse.common.Util;
 import com.sap.sse.common.impl.MillisecondsTimePoint;
-import com.sap.sse.concurrent.LockUtil;
-import com.sap.sse.concurrent.NamedReentrantReadWriteLock;
 
 /**
  * Base implementation for various types of leaderboards. The {@link RaceColumnListener} implementation forwards events
@@ -64,7 +65,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
         implements RaceColumnListener {
     private static final long serialVersionUID = 330156778603279333L;
 
-    static final Double DOUBLE_0 = new Double(0);
+    static final Double DOUBLE_0 = Double.valueOf(0);
 
     private final SettableScoreCorrection scoreCorrection;
 
@@ -84,11 +85,9 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     private final Map<Competitor, Double> carriedPoints;
 
     /**
-     * A set that manages the difference between {@link #getCompetitors()} and {@link #getAllCompetitors()}. Access is
-     * controlled by the {@link #suppressedCompetitorsLock} lock.
+     * A set that manages the difference between {@link #getCompetitors()} and {@link #getAllCompetitors()}.
      */
-    private final Set<Competitor> suppressedCompetitors;
-    private final NamedReentrantReadWriteLock suppressedCompetitorsLock;
+    private final ConcurrentHashMap<Competitor, Competitor> suppressedCompetitors;
 
     private final RaceColumnListeners raceColumnListeners;
 
@@ -222,8 +221,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
         this.scoreCorrection = createScoreCorrection();
         this.displayNames = new HashMap<Competitor, String>();
         this.crossLeaderboardResultDiscardingRule = resultDiscardingRule;
-        this.suppressedCompetitors = new HashSet<Competitor>();
-        this.suppressedCompetitorsLock = new NamedReentrantReadWriteLock("suppressedCompetitorsLock", /* fair */ false);
+        this.suppressedCompetitors = new ConcurrentHashMap<>();
     }
 
     protected RaceColumnListeners getRaceColumnListeners() {
@@ -271,6 +269,11 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     }
 
     @Override
+    public void oneAlwaysStaysOneChanged(RaceColumn raceColumn, boolean oneAlwaysStaysOne) {
+        getRaceColumnListeners().notifyListenersAboutOneAlwaysStaysOneChanged(raceColumn, oneAlwaysStaysOne);
+    }
+
+    @Override
     public void raceColumnMoved(RaceColumn raceColumn, int newIndex) {
         getRaceColumnListeners().notifyListenersAboutRaceColumnMoved(raceColumn, newIndex);
     }
@@ -305,6 +308,11 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     public void resultDiscardingRuleChanged(ResultDiscardingRule oldDiscardingRule,
             ResultDiscardingRule newDiscardingRule) {
         getRaceColumnListeners().notifyListenersAboutResultDiscardingRuleChanged(oldDiscardingRule, newDiscardingRule);
+    }
+
+    @Override
+    public void maximumNumberOfDiscardsChanged(Integer oldMaximumNumberOfDiscards, Integer newMaximumNumberOfDiscards) {
+        getRaceColumnListeners().notifyListenersAboutMaximumNumberOfDiscardsChanged(oldMaximumNumberOfDiscards, newMaximumNumberOfDiscards);
     }
 
     @Override
@@ -421,7 +429,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     private boolean isDiscarded(Competitor competitor, RaceColumn raceColumn,
             Iterable<RaceColumn> raceColumnsToConsider, TimePoint timePoint) {
         final Set<RaceColumn> discardedRaceColumns = getResultDiscardingRule().getDiscardedRaceColumns(competitor, this,
-                raceColumnsToConsider, timePoint);
+                raceColumnsToConsider, timePoint, getScoringScheme());
         return isDiscarded(competitor, raceColumn, timePoint, discardedRaceColumns);
     }
 
@@ -433,7 +441,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
      * 
      * @param discardedRaceColumns
      *            expected to be the result of what we would get if we called {@link #getResultDiscardingRule()}.
-     *            {@link ResultDiscardingRule#getDiscardedRaceColumns(Competitor, Leaderboard, Iterable, TimePoint)
+     *            {@link ResultDiscardingRule#getDiscardedRaceColumns(Competitor, Leaderboard, Iterable, TimePoint, ScoringScheme)
      *            getDiscardedRaceColumns(competitor, this, raceColumnsToConsider, timePoint)}.
      */
     private boolean isDiscarded(Competitor competitor, RaceColumn raceColumn, TimePoint timePoint,
@@ -451,7 +459,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     public Double getNetPoints(Competitor competitor, RaceColumn raceColumn, Iterable<RaceColumn> raceColumnsToConsider,
             TimePoint timePoint) {
         final Set<RaceColumn> discardedRaceColumns = getResultDiscardingRule().getDiscardedRaceColumns(competitor, this,
-                raceColumnsToConsider, timePoint);
+                raceColumnsToConsider, timePoint, getScoringScheme());
         return getNetPoints(competitor, raceColumn, timePoint, discardedRaceColumns);
     }
 
@@ -463,7 +471,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
      * 
      * @param discardedRaceColumns
      *            expected to be the result of what we would get if we called {@link #getResultDiscardingRule()}.
-     *            {@link ResultDiscardingRule#getDiscardedRaceColumns(Competitor, Leaderboard, Iterable, TimePoint)
+     *            {@link ResultDiscardingRule#getDiscardedRaceColumns(Competitor, Leaderboard, Iterable, TimePoint, ScoringScheme)
      *            getDiscardedRaceColumns(competitor, this, raceColumnsToConsider, timePoint)}.
      */
     @Override
@@ -484,7 +492,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
             if (totalPoints == null) {
                 result = null;
             } else {
-                result = getScoringScheme().getScoreFactor(raceColumn) * totalPoints;
+                result = getScoringScheme().getScoreScaledByFactor(raceColumn, totalPoints);
             }
         }
         return result;
@@ -496,30 +504,21 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     }
 
     @Override
-    public Double getNetPoints(Competitor competitor, final Iterable<RaceColumn> raceColumnsToConsider,
-            TimePoint timePoint) {
-        // when a column with isStartsWithZeroScore() is found, only reset score if the competitor scored in any race
-        // from there on
-        boolean needToResetScoreUponNextNonEmptyEntry = false;
-        double result = getCarriedPoints(competitor);
-        final Set<RaceColumn> discardedRaceColumns = getResultDiscardingRule().getDiscardedRaceColumns(competitor, this,
-                raceColumnsToConsider, timePoint);
-        for (RaceColumn raceColumn : raceColumnsToConsider) {
-            if (raceColumn.isStartsWithZeroScore()) {
-                needToResetScoreUponNextNonEmptyEntry = true;
-            }
-            if (getScoringScheme().isValidInNetScore(this, raceColumn, competitor, timePoint)) {
-                final Double netPoints = getNetPoints(competitor, raceColumn, timePoint, discardedRaceColumns);
-                if (netPoints != null) {
-                    if (needToResetScoreUponNextNonEmptyEntry) {
-                        result = 0;
-                        needToResetScoreUponNextNonEmptyEntry = false;
-                    }
-                    result += netPoints;
-                }
-            }
-        }
-        return result;
+    public Double getNetPoints(Competitor competitor, final Iterable<RaceColumn> raceColumnsToConsider, TimePoint timePoint) {
+        return getScoringScheme().getNetPoints(this, competitor, raceColumnsToConsider, timePoint);
+    }
+
+    /**
+     * Like {@link #getCompetitorsFromBestToWorst(RaceColumn, TimePoint, WindLegTypeAndLegBearingAndORCPerformanceCurveCache)},
+     * but here callers can provide the total points as a {@link Function} that maps {@link Competitor}s to their
+     * total points at {@code timePoint} for {@code raceColumn}. The default for computing this would be
+     * {@link #getTotalPoints(Competitor, RaceColumn, TimePoint, WindLegTypeAndLegBearingAndORCPerformanceCurveCache)}.
+     */
+    @Override
+    public Iterable<Competitor> getCompetitorsFromBestToWorst(final RaceColumn raceColumn, TimePoint timePoint,
+            WindLegTypeAndLegBearingAndORCPerformanceCurveCache cache) {
+        return getCompetitorsFromBestToWorst(raceColumn, timePoint,
+                competitor->getTotalPoints(competitor, raceColumn, timePoint, cache), cache);
     }
 
     /**
@@ -528,8 +527,8 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
      * points.
      */
     @Override
-    public List<Competitor> getCompetitorsFromBestToWorst(final RaceColumn raceColumn, TimePoint timePoint,
-            WindLegTypeAndLegBearingAndORCPerformanceCurveCache cache) throws NoWindException {
+    public Iterable<Competitor> getCompetitorsFromBestToWorst(final RaceColumn raceColumn, TimePoint timePoint,
+            Function<Competitor, Double> totalPointsSupplier, WindLegTypeAndLegBearingAndORCPerformanceCurveCache cache) {
         final Map<Competitor, com.sap.sse.common.Util.Pair<Double, Fleet>> totalPointsAndFleet = new HashMap<Competitor, com.sap.sse.common.Util.Pair<Double, Fleet>>();
         for (Competitor competitor : getCompetitors()) {
             Double totalPoints = getTotalPoints(competitor, raceColumn, timePoint, cache);
@@ -657,7 +656,7 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
     public Entry getEntry(final Competitor competitor, final RaceColumn race, final TimePoint timePoint)
             throws NoWindException {
         final Set<RaceColumn> discardedRaceColumns = getResultDiscardingRule().getDiscardedRaceColumns(competitor, this,
-                getRaceColumns(), timePoint);
+                getRaceColumns(), timePoint, getScoringScheme());
         return getEntry(competitor, race, timePoint, discardedRaceColumns);
     }
 
@@ -669,10 +668,11 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
                 this, timePoint, new NumberOfCompetitorsFetcherImpl(), getScoringScheme());
         boolean discarded = isDiscarded(competitor, race, timePoint, discardedRaceColumns);
         final Double correctedScore = correctedResults.getCorrectedScore();
-        return new EntryImpl(trackedRankProvider, correctedScore, () -> correctedResults.getUncorrectedScore(),
+        final Double correctedScoreScaledByColumnFactor = correctedScore == null ? null
+                : Double.valueOf(getScoringScheme().getScoreScaledByFactor(race, correctedScore));
+        return new EntryImpl(trackedRankProvider, correctedScoreScaledByColumnFactor, () -> correctedResults.getUncorrectedScore(),
                 correctedResults.isCorrected(),
-                discarded ? DOUBLE_0
-                        : correctedScore == null ? null : Double.valueOf(correctedScore * getScoringScheme().getScoreFactor(race)),
+                discarded ? DOUBLE_0 : correctedScoreScaledByColumnFactor,
                 correctedResults.getMaxPointsReason(), discarded, race.getFleetOfCompetitor(competitor));
     }
 
@@ -738,16 +738,16 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
                 Set<RaceColumn> discardedRacesForCompetitor = discardedRaces.get(competitor);
                 if (discardedRacesForCompetitor == null) {
                     discardedRacesForCompetitor = getResultDiscardingRule().getDiscardedRaceColumns(competitor, this,
-                            getRaceColumns(), timePoint);
+                            getRaceColumns(), timePoint, getScoringScheme());
                     discardedRaces.put(competitor, discardedRacesForCompetitor);
                 }
                 boolean discarded = discardedRacesForCompetitor.contains(raceColumn);
                 final Double correctedScore = correctedResults.getCorrectedScore();
-                Entry entry = new EntryImpl(trackedRankProvider, correctedScore,
+                final Double correctedScoreScaledByColumnFactor = correctedScore == null ? null
+                        : Double.valueOf(getScoringScheme().getScoreScaledByFactor(raceColumn, correctedScore));
+                Entry entry = new EntryImpl(trackedRankProvider, correctedScoreScaledByColumnFactor,
                         () -> correctedResults.getUncorrectedScore(), correctedResults.isCorrected(),
-                        discarded ? DOUBLE_0
-                                : (correctedScore == null ? null
-                                        : Double.valueOf((correctedScore * getScoringScheme().getScoreFactor(raceColumn)))),
+                        discarded ? DOUBLE_0 : correctedScoreScaledByColumnFactor,
                         correctedResults.getMaxPointsReason(), discarded, raceColumn.getFleetOfCompetitor(competitor));
                 result.put(new com.sap.sse.common.Util.Pair<Competitor, RaceColumn>(competitor, raceColumn), entry);
             }
@@ -880,22 +880,12 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
 
     @Override
     public Iterable<Competitor> getSuppressedCompetitors() {
-        LockUtil.lockForRead(suppressedCompetitorsLock);
-        try {
-            return new HashSet<Competitor>(suppressedCompetitors);
-        } finally {
-            LockUtil.unlockAfterRead(suppressedCompetitorsLock);
-        }
+        return new HashSet<>(suppressedCompetitors.keySet());
     }
 
     @Override
     public boolean isSuppressed(Competitor competitor) {
-        LockUtil.lockForRead(suppressedCompetitorsLock);
-        try {
-            return suppressedCompetitors.contains(competitor);
-        } finally {
-            LockUtil.unlockAfterRead(suppressedCompetitorsLock);
-        }
+        return suppressedCompetitors.containsKey(competitor);
     }
 
     @Override
@@ -903,15 +893,10 @@ public abstract class AbstractSimpleLeaderboardImpl extends AbstractLeaderboardW
         if (competitor == null) {
             throw new IllegalArgumentException("Cannot change suppression for a null competitor");
         }
-        LockUtil.lockForWrite(suppressedCompetitorsLock);
-        try {
-            if (suppressed) {
-                suppressedCompetitors.add(competitor);
-            } else {
-                suppressedCompetitors.remove(competitor);
-            }
-        } finally {
-            LockUtil.unlockAfterWrite(suppressedCompetitorsLock);
+        if (suppressed) {
+            suppressedCompetitors.put(competitor, competitor);
+        } else {
+            suppressedCompetitors.remove(competitor);
         }
         getScoreCorrection().notifyListenersAboutIsSuppressedChange(competitor, suppressed);
     }
